<resources>
    <string name="app_name">Roxie Test</string>
    <string name="label_start_address">Start Address:</string>
    <string name="label_end_address">End Address:</string>
    <string name="label_order_time">Order time:</string>
    <string name="label_price">Price:</string>
    <string name="order_details_title">Order: %1$s</string>
    <string name="order_details_header">Order details</string>
    <string name="vehicle_header">Vehicle</string>
    <string name="label_model">Model:</string>
    <string name="label_number">Number:</string>
    <string name="label_driver">Driver:</string>

</resources>