<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderDetailsActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/driverBarrier" />

            <TextView
                android:id="@+id/orderHeader"
                style="?subHeaderStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_details_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/startAddressLabel"
                style="?labelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_start_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orderHeader" />

            <TextView
                android:id="@+id/startAddress"
                style="?valueStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/startAddressLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/labelsBarrier"
                tools:text="@tools:sample/full_names" />

            <TextView
                android:id="@+id/endAddressLabel"
                style="?labelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_end_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/startAddressBarrier" />

            <TextView
                android:id="@+id/endAddress"
                style="?valueStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/endAddressLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/labelsBarrier"
                tools:text="@tools:sample/full_names" />

            <TextView
                android:id="@+id/orderTimeLabel"
                style="?labelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_order_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/endAddressBarrier" />

            <TextView
                android:id="@+id/orderTime"
                style="?valueStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/orderTimeLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/labelsBarrier"
                tools:text="@tools:sample/full_names" />

            <TextView
                android:id="@+id/priceLabel"
                style="?labelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orderTimeBarrier" />

            <TextView
                android:id="@+id/price"
                style="?valueStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/priceLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/labelsBarrier"
                tools:text="@tools:sample/full_names" />

            <TextView
                android:id="@+id/vehicleHeader"
                style="?subHeaderStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/priceBarrier" />

            <TextView
                android:id="@+id/modelLabel"
                style="?labelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_model"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vehicleHeader" />

            <TextView
                android:id="@+id/model"
                style="?valueStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/modelLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/labelsBarrier"
                tools:text="@tools:sample/full_names" />

            <TextView
                android:id="@+id/regNumberLabel"
                style="?labelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/modelBarrier" />

            <TextView
                android:id="@+id/regNumber"
                style="?valueStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/regNumberLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/labelsBarrier"
                tools:text="@tools:sample/full_names" />

            <TextView
                android:id="@+id/driverLabel"
                style="?labelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_driver"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/regNumberBarrier" />

            <TextView
                android:id="@+id/driver"
                style="?valueStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/driverLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/labelsBarrier"
                tools:text="@tools:sample/full_names" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/startAddressBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="startAddressLabel,startAddress" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/endAddressBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="endAddressLabel,endAddress" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/orderTimeBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="orderTimeLabel,orderTime" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/priceBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="priceLabel,price" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/labelsBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="startAddressLabel,endAddressLabel, orderTimeLabel, priceLabel, modelLabel, regNumberLabel, driverLabel" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/modelBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="modelLabel,model" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/regNumberBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="regNumberLabel,regNumber" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/driverBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="driverLabel,driver" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/ic_action_back" />

    </com.google.android.material.appbar.AppBarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>