<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_item_bg"
    android:padding="@dimen/margin_medium">

    <TextView
        android:id="@+id/startAddressLabel"
        style="?labelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_start_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startAddress"
        style="?valueStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/startAddressLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelsBarrier"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/endAddressLabel"
        style="?labelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_end_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startAddressBarrier" />

    <TextView
        android:id="@+id/endAddress"
        style="?valueStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/endAddressLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelsBarrier"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/orderTimeLabel"
        style="?labelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_order_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/endAddressBarrier" />

    <TextView
        android:id="@+id/orderTime"
        style="?valueStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/orderTimeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelsBarrier"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/priceLabel"
        style="?labelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderTimeBarrier" />

    <TextView
        android:id="@+id/price"
        style="?valueStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/priceLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelsBarrier"
        tools:text="@tools:sample/full_names" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/startAddressBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="startAddressLabel,startAddress" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/endAddressBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="endAddressLabel,endAddress" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/orderTimeBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="orderTimeLabel,orderTime" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/labelsBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="startAddressLabel,endAddressLabel, orderTimeLabel, priceLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>